[gd_scene load_steps=36 format=2]

[ext_resource path="res://World/yeti_mushroom_1.png" type="Texture" id=1]
[ext_resource path="res://UI/lines01-Sheet.png" type="Texture" id=2]
[ext_resource path="res://UI/YetiMushroomIntake.gd" type="Script" id=3]
[ext_resource path="res://fonts/PixelTandysoft-0rJG.ttf" type="DynamicFontData" id=4]
[ext_resource path="res://UI/cave_top.png" type="Texture" id=5]
[ext_resource path="res://UI/cave_bottom.png" type="Texture" id=6]
[ext_resource path="res://Animals/RedFrog1.tscn" type="PackedScene" id=7]
[ext_resource path="res://UI/kaleicospio03-Sheet.png" type="Texture" id=8]
[ext_resource path="res://Effects/blinking_eye_1_white.png" type="Texture" id=9]
[ext_resource path="res://Animals/BlueFrog1.tscn" type="PackedScene" id=10]
[ext_resource path="res://Animals/GreenFrog1.tscn" type="PackedScene" id=11]
[ext_resource path="res://Animals/PurpleFrog1.tscn" type="PackedScene" id=12]
[ext_resource path="res://Animals/YellowFrog1.tscn" type="PackedScene" id=13]

[sub_resource type="AtlasTexture" id=10]
atlas = ExtResource( 8 )
region = Rect2( 0, 0, 256, 256 )

[sub_resource type="AtlasTexture" id=11]
atlas = ExtResource( 8 )
region = Rect2( 256, 0, 256, 256 )

[sub_resource type="AtlasTexture" id=12]
atlas = ExtResource( 8 )
region = Rect2( 512, 0, 256, 256 )

[sub_resource type="AtlasTexture" id=13]
atlas = ExtResource( 8 )
region = Rect2( 768, 0, 256, 256 )

[sub_resource type="AtlasTexture" id=14]
atlas = ExtResource( 8 )
region = Rect2( 1024, 0, 256, 256 )

[sub_resource type="AtlasTexture" id=15]
atlas = ExtResource( 8 )
region = Rect2( 1280, 0, 256, 256 )

[sub_resource type="SpriteFrames" id=16]
animations = [ {
"frames": [ SubResource( 10 ), SubResource( 11 ), SubResource( 12 ), SubResource( 13 ), SubResource( 14 ), SubResource( 15 ) ],
"loop": true,
"name": "default",
"speed": 5.0
} ]

[sub_resource type="AtlasTexture" id=1]
atlas = ExtResource( 2 )
region = Rect2( 0, 0, 256, 256 )

[sub_resource type="AtlasTexture" id=2]
atlas = ExtResource( 2 )
region = Rect2( 256, 0, 256, 256 )

[sub_resource type="AtlasTexture" id=3]
atlas = ExtResource( 2 )
region = Rect2( 512, 0, 256, 256 )

[sub_resource type="AtlasTexture" id=4]
atlas = ExtResource( 2 )
region = Rect2( 768, 0, 256, 256 )

[sub_resource type="AtlasTexture" id=5]
atlas = ExtResource( 2 )
region = Rect2( 1024, 0, 256, 256 )

[sub_resource type="AtlasTexture" id=6]
atlas = ExtResource( 2 )
region = Rect2( 1280, 0, 256, 256 )

[sub_resource type="SpriteFrames" id=7]
animations = [ {
"frames": [ SubResource( 1 ), SubResource( 2 ), SubResource( 3 ), SubResource( 4 ), SubResource( 5 ), SubResource( 6 ) ],
"loop": true,
"name": "default",
"speed": 8.0
} ]

[sub_resource type="StyleBoxFlat" id=8]
bg_color = Color( 0.647059, 0.670588, 0.627451, 0.572549 )
corner_radius_top_left = 50
corner_radius_top_right = 50
corner_radius_bottom_right = 50
corner_radius_bottom_left = 50

[sub_resource type="DynamicFont" id=9]
size = 10
font_data = ExtResource( 4 )

[sub_resource type="DynamicFont" id=17]
size = 10
font_data = ExtResource( 4 )

[sub_resource type="AtlasTexture" id=18]
atlas = ExtResource( 9 )
region = Rect2( 552, 0, 160, 155 )

[sub_resource type="AtlasTexture" id=19]
atlas = ExtResource( 9 )
region = Rect2( 184, 0, 160, 155 )

[sub_resource type="AtlasTexture" id=20]
atlas = ExtResource( 9 )
region = Rect2( 368, 0, 160, 155 )

[sub_resource type="AtlasTexture" id=21]
atlas = ExtResource( 9 )
region = Rect2( 0, 0, 160, 155 )

[sub_resource type="SpriteFrames" id=22]
animations = [ {
"frames": [ SubResource( 18 ), SubResource( 19 ), SubResource( 20 ), SubResource( 21 ) ],
"loop": true,
"name": "default",
"speed": 5.0
} ]

[node name="YetiMushroomIntake" type="Node2D"]
position = Vector2( 0, 10 )
script = ExtResource( 3 )

[node name="Panel" type="Panel" parent="."]
margin_left = -44.0
margin_top = -28.0
margin_right = 366.0
margin_bottom = 205.0

[node name="AnimatedSprite2" type="AnimatedSprite" parent="."]
modulate = Color( 0.376471, 0.443137, 0.858824, 1 )
position = Vector2( 160, 83 )
scale = Vector2( 1.35156, 1 )
frames = SubResource( 16 )
frame = 4
playing = true

[node name="AnimatedSprite" type="AnimatedSprite" parent="."]
position = Vector2( 160.5, 83 )
scale = Vector2( 1.30078, 0.730469 )
frames = SubResource( 7 )
frame = 1
playing = true

[node name="YellowFrog1" parent="." instance=ExtResource( 13 )]
position = Vector2( 38, 36 )

[node name="YellowFrog2" parent="." instance=ExtResource( 13 )]
position = Vector2( 189, 39 )

[node name="GreenFrog1" parent="." instance=ExtResource( 11 )]
position = Vector2( 51, 145 )

[node name="GreenFrog2" parent="." instance=ExtResource( 11 )]
position = Vector2( 264, 61 )

[node name="GreenFrog3" parent="." instance=ExtResource( 11 )]
position = Vector2( 218, 154 )

[node name="PurpleFrog1" parent="." instance=ExtResource( 12 )]
position = Vector2( 98, 71 )

[node name="PurpleFrog2" parent="." instance=ExtResource( 12 )]
position = Vector2( 221, 97 )

[node name="BlueFrog1" parent="." instance=ExtResource( 10 )]
position = Vector2( 54, 98 )

[node name="BlueFrog2" parent="." instance=ExtResource( 10 )]
position = Vector2( 250, 22 )

[node name="RedFrog1" parent="." instance=ExtResource( 7 )]
position = Vector2( 249, 116 )

[node name="RedFrog2" parent="." instance=ExtResource( 7 )]
position = Vector2( 107, 33 )

[node name="TopCoverPanel" type="Panel" parent="."]
margin_left = 29.0
margin_top = 13.0
margin_right = 293.0
margin_bottom = 79.0

[node name="Sprite" type="Sprite" parent="TopCoverPanel"]
self_modulate = Color( 0.752941, 0.745098, 0.745098, 1 )
position = Vector2( 127.5, 22 )
scale = Vector2( 0.57913, 0.4 )
texture = ExtResource( 5 )

[node name="BottomCoverPanel" type="Panel" parent="."]
margin_left = 29.0
margin_top = 80.0
margin_right = 293.0
margin_bottom = 146.0

[node name="Sprite" type="Sprite" parent="BottomCoverPanel"]
modulate = Color( 0.741176, 0.729412, 0.729412, 1 )
position = Vector2( 135.5, 46.5 )
scale = Vector2( 0.582609, 0.422222 )
texture = ExtResource( 6 )

[node name="Panel2" type="Panel" parent="."]
margin_left = 140.0
margin_top = 60.0
margin_right = 180.0
margin_bottom = 100.0
custom_styles/panel = SubResource( 8 )

[node name="Sprite" type="Sprite" parent="."]
position = Vector2( 160, 80 )
scale = Vector2( 1.5, 1.5 )
texture = ExtResource( 1 )

[node name="Panel4" type="Panel" parent="."]
modulate = Color( 0.321569, 0.321569, 0.321569, 1 )
margin_top = -19.0
margin_right = 327.0
margin_bottom = 176.0

[node name="Panel3" type="Panel" parent="."]
margin_left = 90.0
margin_top = 110.0
margin_right = 90.0
margin_bottom = 110.0

[node name="RichTextLabel" type="RichTextLabel" parent="Panel3"]
margin_left = -37.0
margin_top = 4.0
margin_right = 233.0
margin_bottom = 40.0
rect_scale = Vector2( 0.8, 0.8 )
custom_fonts/normal_font = SubResource( 9 )
bbcode_enabled = true
bbcode_text = "[center] You stumble upon some blue yeti mushrooms..."
text = " You stumble upon some blue yeti mushrooms..."

[node name="RichTextLabel2" type="RichTextLabel" parent="Panel3"]
margin_left = -23.0
margin_top = 20.0
margin_right = 245.0
margin_bottom = 37.0
rect_scale = Vector2( 0.7, 0.7 )
custom_fonts/normal_font = SubResource( 17 )
bbcode_enabled = true
bbcode_text = "[center] why not eat a few?"
text = " why not eat a few?"

[node name="PanelTimer" type="Timer" parent="."]
wait_time = 0.1

[node name="Timer" type="Timer" parent="."]
wait_time = 7.0
one_shot = true

[node name="PushRightTimer" type="Timer" parent="."]
wait_time = 0.7
one_shot = true

[node name="StopRightTimer" type="Timer" parent="."]
wait_time = 0.5
one_shot = true

[node name="SwitchTimer" type="Timer" parent="."]
wait_time = 7.0
one_shot = true

[node name="FadeTimer1" type="Timer" parent="."]
wait_time = 2.0
one_shot = true
autostart = true

[node name="FadeTimer2" type="Timer" parent="."]
wait_time = 5.0
one_shot = true
autostart = true

[node name="FadeTimer3" type="Timer" parent="."]
wait_time = 7.0
one_shot = true
autostart = true

[node name="Eye" type="AnimatedSprite" parent="."]
position = Vector2( 160, 72 )
frames = SubResource( 22 )

[node name="SpinTimer" type="Timer" parent="."]
wait_time = 3.0
one_shot = true

[node name="EndTimer" type="Timer" parent="."]
wait_time = 12.0
one_shot = true

[connection signal="timeout" from="PanelTimer" to="." method="_on_PanelTimer_timeout"]
[connection signal="timeout" from="Timer" to="." method="_on_Timer_timeout"]
[connection signal="timeout" from="PushRightTimer" to="." method="_on_PushRightTimer_timeout"]
[connection signal="timeout" from="StopRightTimer" to="." method="_on_StopRightTimer_timeout"]
[connection signal="timeout" from="SwitchTimer" to="." method="_on_SwitchTimer_timeout"]
[connection signal="timeout" from="FadeTimer1" to="." method="_on_FadeTimer1_timeout"]
[connection signal="timeout" from="FadeTimer2" to="." method="_on_FadeTimer2_timeout"]
[connection signal="timeout" from="FadeTimer3" to="." method="_on_FadeTimer3_timeout"]
[connection signal="animation_finished" from="Eye" to="." method="_on_Eye_animation_finished"]
[connection signal="timeout" from="SpinTimer" to="." method="_on_SpinTimer_timeout"]
[connection signal="timeout" from="EndTimer" to="." method="_on_EndTimer_timeout"]
